--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,6 +126,7 @@ ignore = [
   "A002",  # allow builtin shadowing
   "D203",  # no-blank-line-before-class
   "D213",  # multi-line-summary-second-line
+  "D417",  # disable google requirement for docs on every argument
   "N806",  # allow uppercase variables like X
   "PLC2801",  # allow dunder calls
   "PLR6104",  # Ignore suggestions to use mutating |=
