--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,8 @@ blacken-docs==1.18.0
     # via nbqa
 bleach==6.1.0
     # via nbconvert
+blinker==1.8.2
+    # via xjax (pyproject.toml)
 build==1.2.1
     # via xjax (pyproject.toml)
 certifi==2024.7.4
@@ -532,3 +534,4 @@ websocket-client==1.8.0
     # via jupyter-server
 zipp==3.19.2
     # via etils
+-e file://.
