--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ certifi==2024.7.4
     #   httpcore
     #   httpx
     #   requests
+    #   sentry-sdk
 cffi==1.16.0
     # via argon2-cffi-bindings
 charset-normalizer==3.3.2
@@ -57,7 +58,9 @@ charset-normalizer==3.3.2
 chex==0.1.86
     # via optax
 click==8.1.7
-    # via black
+    # via
+    #   black
+    #   wandb
 comm==0.2.2
     # via ipykernel
 contourpy==1.2.1
@@ -74,6 +77,8 @@ defusedxml==0.7.1
     # via nbconvert
 dill==0.3.8
     # via pylint
+docker-pycreds==0.4.0
+    # via wandb
 etils==1.9.2
     # via
     #   optax
@@ -100,6 +105,10 @@ fsspec==2024.6.1
     # via
     #   etils
     #   huggingface-hub
+gitdb==4.0.11
+    # via gitpython
+gitpython==3.1.43
+    # via wandb
 h11==0.14.0
     # via httpcore
 httpcore==1.0.5
@@ -322,6 +331,7 @@ platformdirs==4.2.2
     #   black
     #   jupyter-core
     #   pylint
+    #   wandb
 pluggy==1.5.0
     # via pytest
 prometheus-client==0.20.0
@@ -329,9 +339,13 @@ prometheus-client==0.20.0
 prompt-toolkit==3.0.47
     # via ipython
 protobuf==5.27.2
-    # via orbax-checkpoint
+    # via
+    #   orbax-checkpoint
+    #   wandb
 psutil==6.0.0
-    # via ipykernel
+    # via
+    #   ipykernel
+    #   wandb
 ptyprocess==0.7.0
     # via
     #   pexpect
@@ -389,6 +403,7 @@ pyyaml==6.0.1
     #   jupytext
     #   orbax-checkpoint
     #   transformers
+    #   wandb
 pyzmq==26.0.3
     # via
     #   ipykernel
@@ -406,6 +421,7 @@ requests==2.32.3
     #   huggingface-hub
     #   jupyterlab-server
     #   transformers
+    #   wandb
 rfc3339-validator==0.1.4
     # via
     #   jsonschema
@@ -437,16 +453,24 @@ seaborn==0.13.2
     # via xjax (pyproject.toml)
 send2trash==1.8.3
     # via jupyter-server
+sentry-sdk==2.11.0
+    # via wandb
+setproctitle==1.3.3
+    # via wandb
 setuptools==71.1.0
     # via
     #   chex
     #   jupyterlab
+    #   wandb
 six==1.16.0
     # via
     #   asttokens
     #   bleach
+    #   docker-pycreds
     #   python-dateutil
     #   rfc3339-validator
+smmap==5.0.1
+    # via gitdb
 sniffio==1.3.1
     # via
     #   anyio
@@ -521,7 +545,11 @@ tzdata==2024.1
 uri-template==1.3.0
     # via jsonschema
 urllib3==2.2.2
-    # via requests
+    # via
+    #   requests
+    #   sentry-sdk
+wandb==0.17.5
+    # via xjax (pyproject.toml)
 wcwidth==0.2.13
     # via prompt-toolkit
 webcolors==24.6.0
