--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
   "blinker",
   "flax",
   "jax",
+  "jupyterlab",
   "nbqa[toolchain]",
   "numpy",
   "pandas",
@@ -44,7 +45,7 @@ dependencies = [
   "scikit-learn",
   "seaborn",
   "transformers",
-  "jupyterlab",
+  "torch",
   "wandb",
   "xgboost",
 
