--- a/requirements.txt
+++ b/requirements.txt
@@ -92,6 +92,7 @@ fastjsonschema==2.20.0
 filelock==3.15.4
     # via
     #   huggingface-hub
+    #   torch
     #   transformers
 flake8==7.1.0
     # via nbqa
@@ -105,6 +106,7 @@ fsspec==2024.6.1
     # via
     #   etils
     #   huggingface-hub
+    #   torch
 gitdb==4.0.11
     # via gitpython
 gitpython==3.1.43
@@ -162,6 +164,7 @@ jinja2==3.1.4
     #   jupyterlab
     #   jupyterlab-server
     #   nbconvert
+    #   torch
 joblib==1.4.2
     # via scikit-learn
 json5==0.9.25
@@ -241,6 +244,8 @@ ml-dtypes==0.4.0
     #   jax
     #   jaxlib
     #   tensorstore
+mpmath==1.3.0
+    # via sympy
 msgpack==1.0.8
     # via
     #   flax
@@ -267,6 +272,8 @@ nest-asyncio==1.6.0
     # via
     #   ipykernel
     #   orbax-checkpoint
+networkx==3.3
+    # via torch
 notebook-shim==0.2.4
     # via jupyterlab
 numpy==2.0.1
@@ -463,6 +470,7 @@ setuptools==71.1.0
     # via
     #   chex
     #   jupyterlab
+    #   torch
     #   wandb
 six==1.16.0
     # via
@@ -481,6 +489,8 @@ soupsieve==2.5
     # via beautifulsoup4
 stack-data==0.6.3
     # via ipython
+sympy==1.13.1
+    # via torch
 tensorstore==0.1.63
     # via
     #   flax
@@ -505,6 +515,8 @@ tomlkit==0.13.0
     # via pylint
 toolz==0.12.1
     # via chex
+torch==2.4.0
+    # via xjax (pyproject.toml)
 tornado==6.4.1
     # via
     #   ipykernel
@@ -542,6 +554,7 @@ typing-extensions==4.12.2
     #   huggingface-hub
     #   mypy
     #   orbax-checkpoint
+    #   torch
 tzdata==2024.1
     # via pandas
 uri-template==1.3.0
