--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dynamic = ["version"]
 dependencies = [
   "blinker",
   "flax",
-  "jax",
+  "jax[cuda12]",
   "jupyterlab",
   "nbqa[toolchain]",
   "numpy",
