--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,6 @@ anyio==4.4.0
     # via
     #   httpx
     #   jupyter-server
-appnope==0.1.4
-    # via ipykernel
 argon2-cffi==23.1.0
     # via jupyter-server
 argon2-cffi-bindings==21.2.0
@@ -94,6 +92,7 @@ filelock==3.15.4
     #   huggingface-hub
     #   torch
     #   transformers
+    #   triton
 flake8==7.1.0
     # via nbqa
 flax==0.8.5
@@ -150,6 +149,10 @@ jax==0.4.30
     #   flax
     #   optax
     #   orbax-checkpoint
+jax-cuda12-pjrt==0.4.30
+    # via jax-cuda12-plugin
+jax-cuda12-plugin==0.4.30
+    # via jax
 jaxlib==0.4.30
     # via
     #   chex
@@ -296,6 +299,55 @@ numpy==2.0.1
     #   tensorstore
     #   transformers
     #   xgboost
+nvidia-cublas-cu12==12.1.3.1
+    # via
+    #   jax-cuda12-plugin
+    #   nvidia-cudnn-cu12
+    #   nvidia-cusolver-cu12
+    #   torch
+nvidia-cuda-cupti-cu12==12.1.105
+    # via
+    #   jax-cuda12-plugin
+    #   torch
+nvidia-cuda-nvcc-cu12==12.5.82
+    # via jax-cuda12-plugin
+nvidia-cuda-nvrtc-cu12==12.1.105
+    # via torch
+nvidia-cuda-runtime-cu12==12.1.105
+    # via
+    #   jax-cuda12-plugin
+    #   torch
+nvidia-cudnn-cu12==9.1.0.70
+    # via
+    #   jax-cuda12-plugin
+    #   torch
+nvidia-cufft-cu12==11.0.2.54
+    # via
+    #   jax-cuda12-plugin
+    #   torch
+nvidia-curand-cu12==10.3.2.106
+    # via torch
+nvidia-cusolver-cu12==11.4.5.107
+    # via
+    #   jax-cuda12-plugin
+    #   torch
+nvidia-cusparse-cu12==12.1.0.106
+    # via
+    #   jax-cuda12-plugin
+    #   nvidia-cusolver-cu12
+    #   torch
+nvidia-nccl-cu12==2.20.5
+    # via
+    #   jax-cuda12-plugin
+    #   torch
+    #   xgboost
+nvidia-nvjitlink-cu12==12.5.82
+    # via
+    #   jax-cuda12-plugin
+    #   nvidia-cusolver-cu12
+    #   nvidia-cusparse-cu12
+nvidia-nvtx-cu12==12.1.105
+    # via torch
 opt-einsum==3.3.0
     # via jax
 optax==0.2.3
@@ -401,7 +453,7 @@ python-json-logger==2.0.7
     # via jupyter-events
 pytz==2024.1
     # via pandas
-pyupgrade==3.16.0
+pyupgrade==3.17.0
     # via nbqa
 pyyaml==6.0.1
     # via
@@ -544,6 +596,8 @@ traitlets==5.14.3
     #   nbformat
 transformers==4.43.3
     # via xjax (pyproject.toml)
+triton==3.0.0
+    # via torch
 types-python-dateutil==2.9.0.20240316
     # via arrow
 typing-extensions==4.12.2
