--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,8 @@ contourpy==1.2.1
     # via matplotlib
 coverage==7.6.0
     # via pytest-cov
+cupy==13.2.0
+    # via xjax (pyproject.toml)
 cycler==0.12.1
     # via matplotlib
 debugpy==1.8.2
@@ -87,6 +89,8 @@ executing==2.0.1
     # via stack-data
 fastjsonschema==2.20.0
     # via nbformat
+fastrlock==0.8.2
+    # via cupy
 filelock==3.15.4
     # via
     #   huggingface-hub
@@ -284,6 +288,7 @@ numpy==2.0.1
     #   xjax (pyproject.toml)
     #   chex
     #   contourpy
+    #   cupy
     #   flax
     #   jax
     #   jaxlib
@@ -384,7 +389,7 @@ pexpect==4.9.0
     # via ipython
 pillow==10.4.0
     # via matplotlib
-pip==24.1.2
+pip==24.2
     # via xjax (pyproject.toml)
 platformdirs==4.2.2
     # via
@@ -518,7 +523,7 @@ sentry-sdk==2.11.0
     # via wandb
 setproctitle==1.3.3
     # via wandb
-setuptools==71.1.0
+setuptools==72.0.0
     # via
     #   chex
     #   jupyterlab
