--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ anyio==4.4.0
     # via
     #   httpx
     #   jupyter-server
+appnope==0.1.4
+    # via ipykernel
 argon2-cffi==23.1.0
     # via jupyter-server
 argon2-cffi-bindings==21.2.0
@@ -65,8 +67,6 @@ contourpy==1.2.1
     # via matplotlib
 coverage==7.6.0
     # via pytest-cov
-cupy==13.2.0
-    # via xjax (pyproject.toml)
 cycler==0.12.1
     # via matplotlib
 debugpy==1.8.2
@@ -89,14 +89,11 @@ executing==2.0.1
     # via stack-data
 fastjsonschema==2.20.0
     # via nbformat
-fastrlock==0.8.2
-    # via cupy
 filelock==3.15.4
     # via
     #   huggingface-hub
     #   torch
     #   transformers
-    #   triton
 flake8==7.1.0
     # via nbqa
 flax==0.8.5
@@ -120,7 +117,7 @@ httpcore==1.0.5
     # via httpx
 httpx==0.27.0
     # via jupyterlab
-huggingface-hub==0.24.2
+huggingface-hub==0.24.3
     # via
     #   tokenizers
     #   transformers
@@ -148,15 +145,10 @@ isort==5.13.2
     #   pylint
 jax==0.4.30
     # via
-    #   xjax (pyproject.toml)
     #   chex
     #   flax
     #   optax
     #   orbax-checkpoint
-jax-cuda12-pjrt==0.4.30
-    # via jax-cuda12-plugin
-jax-cuda12-plugin==0.4.30
-    # via jax
 jaxlib==0.4.30
     # via
     #   chex
@@ -288,7 +280,6 @@ numpy==2.0.1
     #   xjax (pyproject.toml)
     #   chex
     #   contourpy
-    #   cupy
     #   flax
     #   jax
     #   jaxlib
@@ -304,55 +295,6 @@ numpy==2.0.1
     #   tensorstore
     #   transformers
     #   xgboost
-nvidia-cublas-cu12==12.1.3.1
-    # via
-    #   jax-cuda12-plugin
-    #   nvidia-cudnn-cu12
-    #   nvidia-cusolver-cu12
-    #   torch
-nvidia-cuda-cupti-cu12==12.1.105
-    # via
-    #   jax-cuda12-plugin
-    #   torch
-nvidia-cuda-nvcc-cu12==12.5.82
-    # via jax-cuda12-plugin
-nvidia-cuda-nvrtc-cu12==12.1.105
-    # via torch
-nvidia-cuda-runtime-cu12==12.1.105
-    # via
-    #   jax-cuda12-plugin
-    #   torch
-nvidia-cudnn-cu12==9.1.0.70
-    # via
-    #   jax-cuda12-plugin
-    #   torch
-nvidia-cufft-cu12==11.0.2.54
-    # via
-    #   jax-cuda12-plugin
-    #   torch
-nvidia-curand-cu12==10.3.2.106
-    # via torch
-nvidia-cusolver-cu12==11.4.5.107
-    # via
-    #   jax-cuda12-plugin
-    #   torch
-nvidia-cusparse-cu12==12.1.0.106
-    # via
-    #   jax-cuda12-plugin
-    #   nvidia-cusolver-cu12
-    #   torch
-nvidia-nccl-cu12==2.20.5
-    # via
-    #   jax-cuda12-plugin
-    #   torch
-    #   xgboost
-nvidia-nvjitlink-cu12==12.5.82
-    # via
-    #   jax-cuda12-plugin
-    #   nvidia-cusolver-cu12
-    #   nvidia-cusparse-cu12
-nvidia-nvtx-cu12==12.1.105
-    # via torch
 opt-einsum==3.3.0
     # via jax
 optax==0.2.3
@@ -523,7 +465,7 @@ sentry-sdk==2.11.0
     # via wandb
 setproctitle==1.3.3
     # via wandb
-setuptools==72.0.0
+setuptools==72.1.0
     # via
     #   chex
     #   jupyterlab
@@ -601,8 +543,6 @@ traitlets==5.14.3
     #   nbformat
 transformers==4.43.3
     # via xjax (pyproject.toml)
-triton==3.0.0
-    # via torch
 types-python-dateutil==2.9.0.20240316
     # via arrow
 typing-extensions==4.12.2
